--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
                 <configuration>
                     <appName>popejbot</appName>
                     <processTypes>
-                        <web>java $JAVA_OPTS -cp target/classes:target/dependency/* Main</web>
+                        <web>java $JAVA_OPTS -cp target/classes:target/dependency/* com.alekseysavin.voda.main</web>
                     </processTypes>
                 </configuration>
             </plugin>
