--- a/src/Procfile
+++ b/src/Procfile
@@ -1,1 +1,1 @@
-worker: sh target/classes/com/alekseysavin/voda
+web java $JAVA_OPTS -cp target/classes:target/dependency/* com.alekseysavin.voda.main
