--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,14 @@
             <artifactId>telegrambots</artifactId>
             <version>3.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
+
     </dependencies>
 
 
