--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
     </build>
 
     <dependencies>
+        <!-- Emoji lib -->
+        <dependency>
+            <groupId>com.vdurmont</groupId>
+            <artifactId>emoji-java</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.telegram</groupId>
             <artifactId>telegrambots</artifactId>
