--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
                             </manifest>
                         </archive>
                         <descriptorRefs>
-                            <descriptorRef>jar-with-dependensies</descriptorRef>
+                            <descriptorRef>jar-with-dependencies</descriptorRef>
                         </descriptorRefs>
                     </configuration>
                     </execution>
