--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,11 @@
             <artifactId>maven-jar-plugin</artifactId>
             <version>3.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
 
 
     </dependencies>
